--- a/hackday/index.html
+++ b/hackday/index.html
@@ -159,6 +159,22 @@
                     </a>
                 </div>
             </div>
+            <div class="col-lg-12 text-center">
+                        <h2>Data Models</h2>
+                        <hr class="star-primary">
+                    </div>
+                    <div class="col-sm-4 portfolio-item">
+                        <a href="https://github.com/krislinlee/HawaiiBudgetExpenditures/tree/master/neo4j" class="portfolio-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i> <br> Capital Budget Graph
+                                </div>
+                            </div>
+                            <img src="img/capital-budget-graph.png" class="img-responsive" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -174,11 +190,11 @@
             <div class="row">
                 <div class="col-lg-12">
 					<h3>Purpose</h3>
-					<p>During the Code for Hawaii #CodeAcross Panel of the 2016 Unconferenz in Honolulu, the State of Hawaii CIO, Todd Nacapuy, 
-					mentioned that they have a need for matching budget data with spending. 
+					<p>During the Code for Hawaii #CodeAcross Panel of the 2016 Unconferenz in Honolulu, the State of Hawaii CIO, Todd Nacapuy,
+					mentioned that they have a need for matching budget data with spending.
 					It was one of the many things that they need help with given the constraints that they face.</p>
 
-					<p>For the CodeAcross portion of the 2016 Unconferenz, our team is trying to address this need. 
+					<p>For the CodeAcross portion of the 2016 Unconferenz, our team is trying to address this need.
 					We'll be working on a data visualization of budgeted funds versus their expenditures using the open data from the data.hawaii.gov portal. </p>
 					<br>
 					<h3>Current Data Flow</h3>
@@ -194,7 +210,7 @@
                     <h3>Visualizations:</h3>
 					<p>Budget from year to year</p>
 					<p>Expenditures year to year</p>
-					<p>Budget to Expenditures matching</p> 
+					<p>Budget to Expenditures matching</p>
 					<br>
 					<h3>Budget Data Sets: </h3>
 
