--- a/hackday/index.html
+++ b/hackday/index.html
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Hawaii FIscal Data</span>
+                        <span class="name">Hawaii Fiscal Data</span>
                         <hr class="star-light">
                         <span class="skills">FY 2014 - FY 2015 - FY 2016</span>
                     </div>
@@ -105,10 +105,10 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="exp-year/index.html" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i> <br> FY 2015
+                                <i class="fa fa-search-plus fa-3x"></i> <br> By Year
                             </div>
                         </div>
                         <img src="img/portfolio/cake.png" class="img-responsive" alt="">
@@ -174,11 +174,11 @@
             <div class="row">
                 <div class="col-lg-12">
 					<h3>Purpose</h3>
-					<p>During the Code for Hawaii #CodeAcross Panel of the 2016 Unconferenz in Honolulu, the State of Hawaii CIO, Todd Nacapuy, 
-					mentioned that they have a need for matching budget data with spending. 
+					<p>During the Code for Hawaii #CodeAcross Panel of the 2016 Unconferenz in Honolulu, the State of Hawaii CIO, Todd Nacapuy,
+					mentioned that they have a need for matching budget data with spending.
 					It was one of the many things that they need help with given the constraints that they face.</p>
 
-					<p>For the CodeAcross portion of the 2016 Unconferenz, our team is trying to address this need. 
+					<p>For the CodeAcross portion of the 2016 Unconferenz, our team is trying to address this need.
 					We'll be working on a data visualization of budgeted funds versus their expenditures using the open data from the data.hawaii.gov portal. </p>
 					<br>
 					<h3>Current Data Flow</h3>
@@ -194,7 +194,7 @@
                     <h3>Visualizations:</h3>
 					<p>Budget from year to year</p>
 					<p>Expenditures year to year</p>
-					<p>Budget to Expenditures matching</p> 
+					<p>Budget to Expenditures matching</p>
 					<br>
 					<h3>Budget Data Sets: </h3>
 
