--- a/hackday/index.html
+++ b/hackday/index.html
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i> <br> By Year
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/exp-year.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
